resource/net-pol/test-services-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-frontend-allow-services
spec:
  podSelector:
    matchLabels:
      app: web
      role: test-frontend
  ingress:
  - from: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-microservice-allow-services
spec:
  podSelector:
    matchLabels:
      app: web
      role: test-microservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
          role: test-frontend
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-database-allow-services
spec:
  podSelector:
    matchLabels:
      app: web
      role: test-database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
          role: test-microservice
